# OpenHarmony3_2_3

./: .gitignore  make_my_kernel.sh  my_build.sh
base/startup/init/services/init/: init_common_service.c
base/startup/init/services/init/standard/: init.c  init_signal_handler.c
developtools/ace_ets2bundle/compiler/: package-lock.json
developtools/helloworld/: bundle.json
device/board/hihope/rk3568/: BUILD.gn
device/board/hihope/rk3568/openssh/: BUILD.gn
device/board/hihope/rk3568/openssh/etc/: passwd  shadow  sshd.cfg
device/board/hihope/rk3568/openssh/etc/ssh/: ssh_host_rsa_key  ssh_host_rsa_key.pub  sshd_config
device/board/hihope/rk3568/openssh/libexec/: sftp-server  ssh-keysign  ssh-pkcs11-helper  ssh-sk-helper
device/board/hihope/rk3568/openssh/sbin/: sshd
device/board/hihope/rk3568/openssh/share/man/man1/: ssh-add.1  ssh-keygen.1  ssh-keyscan.1  ssh.1
device/board/hihope/rk3568/openssh/share/man/man5/: moduli.5  ssh_config.5  sshd_config.5
device/board/hihope/rk3568/openssh/share/man/man8/: ssh-keysign.8  sshd.8
device/board/unitech/imx6dl/: BUILD.gn  ohos.build
device/board/unitech/imx6dl/bootanimation/: BUILD.gn  ohos.build
device/board/unitech/imx6dl/linux/: BUILD.gn  ohos.build
device/board/unitech/imx6dl/linux/chipset/: BUILD.gn
device/board/unitech/imx6dl/linux/rootfs/: BUILD.gn  modeprint  modetest
device/board/unitech/imx6dl/ut-mfgtools/: start_all_base.bat  start_all_eglfs.bat  start_all_x11.bat  start_dtb.bat  start_kernel.bat  start_rootfs_base.bat  start_rootfs_eglfs.bat  start_rootfs_x11.bat  start_uboot.bat
device/board/unitech/imx6dl/ut-mfgtools/cfg/: download.bat
device/board/unitech/imx6dl/ut-mfgtools/firmware/: README.txt
device/board/unitech/imx6dl/ut-mfgtools/mfgtools/: mfgtool2-imx6dl-emmc-all-base.vbs  mfgtool2-imx6dl-emmc-all-eglfs.vbs  mfgtool2-imx6dl-emmc-all-x11.vbs  mfgtool2-imx6dl-emmc-boot.vbs  mfgtool2-imx6dl-emmc-dtb.vbs  mfgtool2-imx6dl-emmc-kernel.vbs  mfgtool2-imx6dl-emmc-ohos.vbs  mfgtool2-imx6dl-emmc-rootfs-base.vbs  mfgtool2-imx6dl-emmc-rootfs-eglfs.vbs  mfgtool2-imx6dl-emmc-rootfs-x11.vbs  mfgtool2-imx6dl-emmc-uboot-kernel -and_dtb.vbs
device/board/unitech/imx6dl/ut-mfgtools/mfgtools/Document/Eclipse Plugin and mfgtoolcli/: ~$er_Guide.docx
device/board/unitech/imx6dl/ut-mfgtools/mfgtools/Document/V2/: ~$nufacturing Tool V2 UCL User Guide.docx  ~$nufacturing Tool V2 Work Flow.docx
device/board/unitech/imx6dl/ut-mfgtools/mfgtools/Profiles/Linux/OS Firmware/: mksdcard-android.sh  mksdcard.sh  mksdcard.sh.tar  tftpboot.sh  ucl2.xml
device/board/unitech/imx6dl/ut-mfgtools/mfgtools/Profiles/Linux/OS Firmware/firmware/: README
device/board/unitech/imx6dl/ut-mfgtools/mfgtools/Profiles/Linux/OS Firmware/image/: imx6dl-sabresd.dtb  u-boot.imx
device/qemu/arm_virt/linux/images/: system_image_conf.txt  vendor_image_conf.txt
device/qemu/arm_virt/linux/rootfs/: BUILD.gn
drivers/hdf_core/adapter/: BUILD.gn
drivers/hdf_core/adapter/khdf/linux/: Kconfig  Makefile
drivers/hdf_core/adapter/khdf/linux/new_test/: Kconfig  Makefile  new_test.c
drivers/hdf_core/adapter/uhdf2/lwl_test/: BUILD.gn  lwl_hdf_test.c  lwl_hdf_test.cfg  lwl_hdf_test.rc
drivers/hdf_core/framework/test/unittest/utils/hcs_parser/unittest/: hdf_macro_test.h
foundation/graphic/graphic_2d/: bundle.json
kernel/BootLoader/uboot-2019-04/: Makefile  config.bak  make_my_config  make_my_tools  make_my_uboot
kernel/BootLoader/uboot-2019-04/arch/arm/dts/: imx6dl-sabresd.dts  imx6qdl-sabresd.dtsi
kernel/BootLoader/uboot-2019-04/arch/arm/mach-imx/: mac.c  video.c
kernel/BootLoader/uboot-2019-04/board/freescale/mx6sabresd/: Makefile  kernel_dtb.c  mx6dlsabresd.cfg  mx6sabresd.c
kernel/BootLoader/uboot-2019-04/common/: autoboot.c  board_f.c  board_r.c  bootretry.c
kernel/BootLoader/uboot-2019-04/drivers/net/: fec_mxc.c
kernel/BootLoader/uboot-2019-04/env/: env.c
kernel/BootLoader/uboot-2019-04/include/: boot_imximg.h
kernel/BootLoader/uboot-2019-04/include/configs/: mx6sabre_common.h  mx6sabresd.h
kernel/linux/DTB/imx6dl_imh2aevb_dtb/: dtc  imx6dl-sabresd.dtb  imx6dl-sabresd.dts  imx6qdl-sabresd.dtsi  make_dtb.sh
kernel/linux/config/linux-5.10/arch/arm/configs/: imx6dl_standard_defconfig
kernel/linux/config/linux-5.10/arch/arm64/configs/: ut-qemu-arm64-linux_standard_defconfig
kernel/linux/patches/linux-5.10/imx6dl_patch/: imx6dl.patch
